--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/vue3": "^6.3.12",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
