--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 -s ./public ",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
@@ -42,6 +42,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "file-loader": "^6.2.0",
     "image-webpack-loader": "^8.0.1",
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
